# miniapp-template

./: .gitignore  LICENSE  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  知识.txt
.github/workflows/: build.yml
aiot-vue-cli/: README  package.json
aiot-vue-cli/cli-libs/: index.js
aiot-vue-cli/cli-libs/aiot-qjsc-tool/: README.MD  index.js  package.json
aiot-vue-cli/cli-libs/aiot-qjsc-tool/libs/: libs.js  qjsc.js
aiot-vue-cli/cli-libs/falcon-styler/: index.js  package.json
aiot-vue-cli/cli-libs/falcon-styler/lib/: shorthand-parser.js  validator.js
aiot-vue-cli/cli-libs/falcon-styler/tests/: testRpxUnit.js
aiot-vue-cli/src/: cli.js  index.js  tags
aiot-vue-cli/src/check-update/: NcuChecker.js  NcuEnhance.js  NcuVersionUtil.js
aiot-vue-cli/src/check-update/tests/: TstNcu.js
aiot-vue-cli/src/cli-actions/: adb.js  build.js  check-update.js  create.js  simulator.js  upload.js  web.js
aiot-vue-cli/src/cli-actions/utils/: UploadInfo.js
aiot-vue-cli/src/libs/: appinfo.js  common.js  helper.js  log.js  parser.js  rollup.config.js  rollup.config.service.js  share.js
aiot-vue-cli/src/rollup-plugins/: app.js  asset.js  falcon-module.js  falcon-vue.js  global-wrap.js  image.js  style-json.js  vue-replace.js
aiot-vue-cli/src/steps/: build.js  manifest.js  pack.js  qjsc.js
aiot-vue-cli/src/webpreview/: index.js
aiot-vue-cli/src/webpreview/configs/: config.js  helper.js  htmlwebpackplugin.js  utils.js  vue-loader.conf.js  webpack.build.web.conf.js  webpack.common.conf.js  webpack.dev.conf.js  webpack.dll.config.js
aiot-vue-cli/src/webpreview/web/: index.html  preview.html
aiot-vue-cli/web-libs/: web-index.js
aiot-vue-cli/web-libs/falcon-vue-precompiler/src/hooks/: events.js  style-binding.js  style.js
aiot-vue-cli/web-libs/falcon-vue-precompiler/src/util/: ast.js
aiot-vue-cli/web-loaders/falcon-style-loader/: package.json
aiot-vue-cli/web-loaders/falcon-style-loader/lib/: addStylesClient.js
aiot-vue-cli/web-loaders/falcon-vue-loader/: README.md  package.json
aiot-vue-cli/web-loaders/falcon-vue-loader/lib/: component-normalizer.js  loader.js  parser.js
aiot-vue-cli/web-loaders/falcon-vue-loader/lib/template-compiler/: index.js
aiot-vue-cli/web-loaders/falcon-vue-loader/lib/utils/: normalize.js
jsapi/: CMakeLists.txt
jsapi/src/: Fetch.cpp  Fetch.hpp  JSAPI.cpp  JSAPI.hpp  strUtils.cpp  strUtils.hpp
jsapi/src/AI/: AI.cpp  AI.hpp  AICallback.hpp  ConversationInfo.hpp  ConversationManager.cpp  ConversationManager.hpp  ConversationNode.hpp  JSAI.cpp  JSAI.hpp  SettingsResponse.hpp
jsapi/src/Database/: Database.cpp  Database.hpp  Delete.cpp  Delete.hpp  Includes.hpp  Insert.cpp  Insert.hpp  Select.cpp  Select.hpp  Size.cpp  Size.hpp  Table.cpp  Table.hpp  Update.cpp  Update.hpp
jsapi/src/Exceptions/: AssertFailed.hpp  CurlError.hpp  DatabaseError.hpp  Exception.hpp  NetworkError.hpp
jsapi/src/IME/: IME.cpp  IME.hpp  JSIME.cpp  JSIME.hpp
jsapi/src/ScanInput/: JSScanInput.cpp  JSScanInput.hpp  ScanInput.cpp  ScanInput.hpp  ScanInputCallback.hpp
tools/: build.sh
ui/: package.json
ui/src/: app.js  app.json  base-page.js
ui/src/@types/: falcon.d.ts
ui/src/pages/index/: index.ts  index.vue
ui/src/styles/: section.less
